CICD/Kubernetes/manifests/deploy_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: max-deploy-with-autoscaling # Имя пода
  labels: # лейблы понадобятся в дальнейшем
    app: my-k8s-application
    env: prod
    owner: MaxKoval
spec:
  replicas: 2 # Количество реплик Pods
  selector: # С какими Pod будет работать deploy
    matchLabels: # С Pod, которые имеют labels
      project: lesson # project: lesson
  template: # Начинаем создавать Pod
    metadata:
      labels: # Прикручиваем ко всем Pod лейбл, указанный ниже
        project: lesson # этот лейбл должен совпадать с matchLabels выше
    spec:
      containers: # объявляем используемый контейнер
        - name: max-container
          image: adv4000/k8sphp:version1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
